--- a/package.json
+++ b/package.json
@@ -24,6 +24,8 @@
     "axios": "^0.18.0",
     "bluebird": "^3.5.1",
     "body-parser": "^1.10.2",
+    "bootstrap": "3.3.4",
+    "bootstrap-rtl": "^3.3.4",
     "chai": "~1.8.1",
     "connect-flash": "^0.1.1",
     "cookie-parser": "^1.3.3",
