--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "connect-flash": "^0.1.1",
     "cookie-parser": "^1.3.3",
     "core-js": "^2.4.1",
+    "cors": "^2.8.4",
     "debug": "^2.1.1",
     "express": "^4.11.1",
     "express-session": "^1.10.1",
