--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "core-js": "^2.4.1",
     "cors": "^2.8.4",
     "debug": "^2.1.1",
+    "ejs": "^2.5.9",
     "express": "^4.11.1",
     "express-session": "^1.10.1",
     "jade": "^1.9.1",
