--- a/package.json
+++ b/package.json
@@ -45,6 +45,8 @@
     "rxjs": "^5.5.6",
     "serve-favicon": "^2.2.0",
     "should": "~2.1.0",
+    "socket.io": "^2.1.0",
+    "socket.io-client": "^2.1.0",
     "zone.js": "^0.8.19"
   },
   "devDependencies": {
@@ -54,6 +56,7 @@
     "@types/jasmine": "~2.8.3",
     "@types/jasminewd2": "~2.0.2",
     "@types/node": "~6.0.60",
+    "@types/socket.io-client": "^1.4.32",
     "codelyzer": "^4.0.1",
     "jasmine-core": "~2.8.0",
     "jasmine-spec-reporter": "~4.2.1",
