--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@angular/platform-browser-dynamic": "^5.2.0",
     "@angular/router": "^5.2.0",
     "axios": "^0.18.0",
+    "better-queue": "^3.8.7",
     "bluebird": "^3.5.1",
     "body-parser": "^1.10.2",
     "bootstrap": "3.3.4",
