--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "passport": "^0.2.1",
     "passport-local": "^1.0.0",
     "passport-local-mongoose": "^1.0.0",
+    "promise-queue": "^2.2.5",
     "run-queue": "^1.0.3",
     "rxjs": "^5.5.6",
     "serve-favicon": "^2.2.0",
