--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "bootstrap": "3.3.4",
     "bootstrap-rtl": "^3.3.4",
     "chai": "~1.8.1",
+    "child-process-promise": "^2.2.1",
     "connect-flash": "^0.1.1",
     "cookie-parser": "^1.3.3",
     "core-js": "^2.4.1",
