--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "mocha": "~1.14.0",
     "mongoose": "^4.4.1",
     "morgan": "^1.5.1",
+    "p-queue": "^2.4.2",
     "passport": "^0.2.1",
     "passport-local": "^1.0.0",
     "passport-local-mongoose": "^1.0.0",
