add uuid for downlod task

--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "license": "MIT",
   "scripts": {
     "ng": "ng",
-    "start": "node server.js",
+    "start": "nodemon server.js",
     "build": "ng build --prod",
     "test": "ng test",
     "lint": "ng lint",
@@ -49,6 +49,7 @@
     "should": "~2.1.0",
     "socket.io": "^2.1.0",
     "socket.io-client": "^2.1.0",
+    "uuid": "^3.2.1",
     "zone.js": "^0.8.19"
   },
   "devDependencies": {
