--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "express": "^4.11.1",
     "express-session": "^1.10.1",
     "jade": "^1.11.0",
+    "lodash": "^4.17.10",
     "mocha": "~1.14.0",
     "mongoose": "^4.4.1",
     "morgan": "^1.5.1",
