--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "promise-queue": "^2.2.5",
     "rxjs": "^5.5.6",
     "serve-favicon": "^2.2.0",
+    "shelljs": "^0.8.3",
     "should": "~2.1.0",
     "socket.io": "^2.1.0",
     "socket.io-client": "^2.1.0",
